feature: usage activity

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="64dp"
         android:background="@drawable/wristassist_logo"
-        app:layout_constraintBottom_toTopOf="@+id/total_cost_tv"
+        app:layout_constraintBottom_toTopOf="@+id/version_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,21 +29,8 @@
         android:text="@string/wristassist_about"
         android:textAlignment="center"
         android:textSize="16sp"
+        android:lineSpacingExtra="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/total_cost_tv" />
-
-    <TextView
-        android:id="@+id/total_cost_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:paddingHorizontal="24dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/version_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
