--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -17,21 +17,23 @@
             android:max="18"/>
 
         <SwitchPreference
+            app:key="net.devemperor.wristassist.instant_input"
+            app:title="@string/wristassist_instant_input"
+            android:defaultValue="false"/>
+
+        <SwitchPreference
             app:key="net.devemperor.wristassist.hands_free"
             app:title="@string/wristassist_hands_free"
-            app:summary="@string/wristassist_hands_free_message"
             android:defaultValue="false"/>
 
         <SwitchPreference
             app:key="net.devemperor.wristassist.vibrate"
             app:title="@string/wristassist_vibrate"
-            app:summary="@string/wristassist_vibrate_message"
             android:defaultValue="true"/>
 
         <SwitchPreference
             app:key="net.devemperor.wristassist.show_cost"
             app:title="@string/wristassist_show_cost"
-            app:summary="@string/wristassist_show_cost_message"
             android:defaultValue="false"/>
 
     </PreferenceCategory>
