--- a/app/src/main/res/layout/layout_usage_footer.xml
+++ b/app/src/main/res/layout/layout_usage_footer.xml
@@ -15,7 +15,8 @@
 
     <Button
         android:id="@+id/usage_reset_btn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginVertical="16dp"
