--- a/app/src/main/res/layout/layout_usage_footer.xml
+++ b/app/src/main/res/layout/layout_usage_footer.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginVertical="16dp"
+        android:layout_marginTop="16dp"
         android:onClick="resetUsage"
         android:text="@string/wristassist_reset" />
 </LinearLayout>
