--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="wristassist_white">#ffffff</color>
     <color name="wristassist_black">#000000</color>
     <color name="wristassist_grey">#A8A8A8</color>
+    <color name="wristassist_red">#CC0000</color>
 </resources>
