--- a/app/src/main/res/layout/activity_open_image.xml
+++ b/app/src/main/res/layout/activity_open_image.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingHorizontal="24dp"
     android:fillViewport="false"
     android:id="@+id/open_image_sv">
 
@@ -13,24 +12,29 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.jsibbold.zoomage.ZoomageView
+        <androidx.wear.widget.BoxInsetLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="32dp"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="true"
-            android:id="@+id/open_image_iv"
-            android:transitionName="image"
-            app:zoomage_restrictBounds="false"
-            app:zoomage_animateOnReset="true"
-            app:zoomage_autoResetMode="UNDER"
-            app:zoomage_autoCenter="true"
-            app:zoomage_zoomable="true"
-            app:zoomage_translatable="true"
-            app:zoomage_minScale="0.6"
-            app:zoomage_maxScale="8"
-            app:zoomage_doubleTapToZoom="true"/>
+            android:layout_height="wrap_content">
+
+            <com.jsibbold.zoomage.ZoomageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:id="@+id/open_image_iv"
+                android:transitionName="image"
+                app:zoomage_restrictBounds="false"
+                app:zoomage_animateOnReset="true"
+                app:zoomage_autoResetMode="UNDER"
+                app:zoomage_autoCenter="true"
+                app:zoomage_zoomable="true"
+                app:zoomage_translatable="true"
+                app:zoomage_minScale="0.6"
+                app:zoomage_maxScale="8"
+                app:zoomage_doubleTapToZoom="true"
+                app:layout_boxedEdges="all"/>
+        </androidx.wear.widget.BoxInsetLayout>
 
         <ImageButton
             android:layout_width="64dp"
@@ -49,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textColor="@color/wristassist_purple"
             android:textAlignment="center"
@@ -61,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -71,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_prompt_tv"/>
@@ -80,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -91,6 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_revised_prompt_tv"/>
@@ -100,6 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -110,6 +120,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_model_tv"/>
@@ -119,6 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -130,6 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_quality_tv"/>
@@ -139,6 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -149,6 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_size_tv"/>
@@ -158,6 +173,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -169,6 +185,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_style_tv"/>
@@ -178,6 +195,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="24dp"
             android:textSize="18sp"
             android:textColor="@color/wristassist_purple"
             android:textStyle="bold|italic"
@@ -188,6 +206,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="24dp"
             android:textSize="16sp"
             android:textAlignment="center"
             android:id="@+id/open_image_created_tv"/>
