--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,12 +2,14 @@
 <resources>
     <string-array name="models_chat">
         <item name="gpt-3.5-turbo">GPT-3.5 Turbo</item>
+        <item name="gpt-4o">GPT-4 Omni</item>
         <item name="gpt-4-turbo">GPT-4 Turbo</item>
         <item name="gpt-4">GPT-4</item>
         <item name="gpt-4-32k">GPT-4 32K</item>
     </string-array>
     <string-array name="models_chat_values">
         <item name="gpt-3.5-turbo">gpt-3.5-turbo</item>
+        <item name="gpt-4o">gpt-4o</item>
         <item name="gpt-4-turbo">gpt-4-turbo-preview</item>
         <item name="gpt-4">gpt-4</item>
         <item name="gpt-4-32k">gpt-4-32k</item>
